--- a/app/translations/locales/de.json
+++ b/app/translations/locales/de.json
@@ -1,4 +1,5 @@
 {
+  "forms:title": "(de) Forms (Lazy Loaded)",
   "welcome": "Willkommen {name}. Sie haben {unreadCount, number} {unreadCount, plural, one {Nachricht} other {Nachrichten}}",
   "welcome:date": "Das heutige Datum ist {date}!"
 }
