--- a/app/translations/locales/en-GB.json
+++ b/app/translations/locales/en-GB.json
@@ -1,4 +1,5 @@
 {
-  "welcome": "Hello {name}. You have {unreadCount, number} {unreadCount, plural,\n                      one {message}\n                      other {messages}\n                    }",
-  "welcome:date": "The date today is {date}"
+  "forms:title": "(en-GB) Forms (Lazy Loaded)",
+  "welcome": "(en-GB) Hello {name}. You have {unreadCount, number} {unreadCount, plural,\n                      one {message}\n                      other {messages}\n                    }",
+  "welcome:date": "(en-GB) The date today is {date}"
 }
