--- a/app/translations/locales/fr.json
+++ b/app/translations/locales/fr.json
@@ -1,5 +1,5 @@
 {
-  "forms:title": "Forms (Lazy Loaded)",
-  "welcome": "Hello {name}. You have {unreadCount, number} {unreadCount, plural,\n                      one {message}\n                      other {messages}\n                    }",
-  "welcome:date": "The date today is {date}"
+  "forms:title": "(fr) Forms (Lazy Loaded)",
+  "welcome": "(fr) Hello {name}. You have {unreadCount, number} {unreadCount, plural,\n                      one {message}\n                      other {messages}\n                    }",
+  "welcome:date": "(fr) The date today is {date}"
 }
