--- a/app/translations/locales/de.json
+++ b/app/translations/locales/de.json
@@ -1,5 +1,5 @@
 {
-  "forms:title": "(de) Forms (Lazy Loaded)",
-  "welcome": "Willkommen {name}. Sie haben {unreadCount, number} {unreadCount, plural, one {Nachricht} other {Nachrichten}}",
-  "welcome:date": "Das heutige Datum ist {date}!"
+  "containers.1645138363": "(de) Forms (Lazy Loaded)",
+  "containers.2731101254": "Willkommen {name}. Sie haben {unreadCount, number} {unreadCount, plural, one {Nachricht} other {Nachrichten}}",
+  "containers.Forms.165405603": "Das heutige Datum ist {date}!"
 }
