--- a/app/translations/locales/en.json
+++ b/app/translations/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "forms:title": "Forms (Lazy Loaded)",
-  "welcome": "Hello {name}. You have {unreadCount, number} {unreadCount, plural,\n                      one {message}\n                      other {messages}\n                    }",
-  "welcome:date": "The date today is {date}"
+  "containers.1645138363": "Hello {name}. You have {unreadCount, number} {unreadCount, plural,\n                      one {message}\n                      other {messages}\n                    }",
+  "containers.2731101254": "The date today is {date}",
+  "containers.Forms.165405603": "Forms (Lazy Loaded)"
 }
