--- a/app/translations/locales/en-GB.json
+++ b/app/translations/locales/en-GB.json
@@ -1,5 +1,5 @@
 {
-  "forms:title": "(en-GB) Forms (Lazy Loaded)",
-  "welcome": "(en-GB) Hello {name}. You have {unreadCount, number} {unreadCount, plural,\n                      one {message}\n                      other {messages}\n                    }",
-  "welcome:date": "(en-GB) The date today is {date}"
+  "containers.1645138363": "(eb-GB) Hello {name}. You have {unreadCount, number} {unreadCount, plural,\n                      one {message}\n                      other {messages}\n                    }",
+  "containers.2731101254": "(eb-GB) The date today is {date}",
+  "containers.Forms.165405603": "(eb-GB) Forms (Lazy Loaded)"
 }
