--- a/app/translations/locales/fr.json
+++ b/app/translations/locales/fr.json
@@ -1,5 +1,5 @@
 {
-  "forms:title": "(fr) Forms (Lazy Loaded)",
-  "welcome": "(fr) Hello {name}. You have {unreadCount, number} {unreadCount, plural,\n                      one {message}\n                      other {messages}\n                    }",
-  "welcome:date": "(fr) The date today is {date}"
+  "containers.1645138363": "(fr) Hello {name}. You have {unreadCount, number} {unreadCount, plural,\n                      one {message}\n                      other {messages}\n                    }",
+  "containers.2731101254": "(fr) The date today is {date}",
+  "containers.Forms.165405603": "(fr) Forms (Lazy Loaded)"
 }
