--- a/app/translations/locales/de.json
+++ b/app/translations/locales/de.json
@@ -1,5 +1,5 @@
 {
   "containers.1645138363": "Willkommen {name}. Sie haben {unreadCount, number} {unreadCount, plural, one {Nachricht} other {Nachrichten}}",
-  "containers.2731101254": "(de) Forms (Lazy Loaded)",
-  "containers.Forms.165405603": "Das heutige Datum ist {date}!"
+  "containers.2731101254": "Das heutige Datum ist {date}!",
+  "containers.Forms.165405603": "(de) Forms (Lazy Loaded)"
 }
