Tidy + update translations

--- a/app/translations/locales/de.json
+++ b/app/translations/locales/de.json
@@ -8,7 +8,7 @@
     "id": "containers.2731101254"
   },
   {
-    "defaultMessage": "Forms (Lazy Loaded)",
+    "defaultMessage": "Formulare (Lazy Loaded)",
     "id": "containers.Forms.165405603"
   },
   {
