--- a/app/translations/locales/fr.json
+++ b/app/translations/locales/fr.json
@@ -1,10 +1,12 @@
 [
   {
     "defaultMessage": "Hello {name}. You have {unreadCount, number} {unreadCount, plural,\n                      one {message}\n                      other {messages}\n                    }",
+    "description": "Main locale page title",
     "id": "containers.1645138363"
   },
   {
     "defaultMessage": "The date today is {date}",
+    "description": "The locale date now",
     "id": "containers.2731101254"
   },
   {
@@ -17,6 +19,7 @@
   },
   {
     "defaultMessage": "Soumettre",
+    "description": "The submit button",
     "id": "containers.Forms.layouts.submit"
   }
 ]
