--- a/app/translations/locales/en-GB_whitelist.json
+++ b/app/translations/locales/en-GB_whitelist.json
@@ -1,4 +1,9 @@
 {
   "ids": [
+    "containers.1645138363",
+    "containers.2731101254",
+    "containers.Forms.165405603",
+    "containers.Forms.layouts.reset",
+    "containers.Forms.layouts.submit"
   ]
 }
