--- a/app/i18n/summary.json
+++ b/app/i18n/summary.json
@@ -359,6 +359,46 @@
         ]
       },
       "timestamp": "2019-12-14T13:37:15.615Z"
+    },
+    {
+      "summary": {
+        "languages": [
+          {
+            "added": 0,
+            "lang": "en-GB",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "lang": "de",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "lang": "fr",
+            "removed": 0,
+            "untranslated": 3,
+            "updated": 0,
+            "wordCount": 12
+          }
+        ],
+        "totalLanguagesCount": 3,
+        "totalTranslationsCount": 5,
+        "totalUntranslatedCount": 3,
+        "totalWordCount": 12,
+        "translationLanguages": [
+          "en-GB",
+          "de",
+          "fr"
+        ]
+      },
+      "timestamp": "2019-12-14T17:54:38.320Z"
     }
   ]
 }
