--- a/app/i18n/summary.json
+++ b/app/i18n/summary.json
@@ -479,6 +479,361 @@
         ]
       },
       "timestamp": "2019-12-14T18:35:10.528Z"
+    },
+    {
+      "summary": {
+        "languages": [
+          {
+            "added": 0,
+            "lang": "en-GB",
+            "removed": 0,
+            "untranslated": 3,
+            "updated": 0,
+            "wordCount": 7
+          },
+          {
+            "added": 0,
+            "lang": "de",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "lang": "fr",
+            "removed": 0,
+            "untranslated": 3,
+            "updated": 0,
+            "wordCount": 12
+          }
+        ],
+        "totalLanguagesCount": 3,
+        "totalTranslationsCount": 5,
+        "totalUntranslatedCount": 6,
+        "totalWordCount": 19,
+        "translationLanguages": [
+          "en-GB",
+          "de",
+          "fr"
+        ]
+      },
+      "timestamp": "2019-12-15T17:16:58.352Z",
+      "version": "1.0.229"
+    },
+    {
+      "summary": {
+        "languages": [
+          {
+            "added": 0,
+            "lang": "en-GB",
+            "removed": 0,
+            "untranslated": 5,
+            "updated": 0,
+            "wordCount": 16
+          },
+          {
+            "added": 0,
+            "lang": "de",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "lang": "fr",
+            "removed": 0,
+            "untranslated": 3,
+            "updated": 0,
+            "wordCount": 12
+          }
+        ],
+        "totalLanguagesCount": 3,
+        "totalTranslationsCount": 5,
+        "totalUntranslatedCount": 8,
+        "totalWordCount": 28,
+        "translationLanguages": [
+          "en-GB",
+          "de",
+          "fr"
+        ]
+      },
+      "timestamp": "2019-12-15T17:17:12.727Z",
+      "version": "1.0.229"
+    },
+    {
+      "summary": {
+        "languages": [
+          {
+            "added": 0,
+            "lang": "en-GB",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "lang": "de",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "lang": "fr",
+            "removed": 0,
+            "untranslated": 3,
+            "updated": 0,
+            "wordCount": 12
+          }
+        ],
+        "totalLanguagesCount": 3,
+        "totalTranslationsCount": 5,
+        "totalUntranslatedCount": 3,
+        "totalWordCount": 12,
+        "translationLanguages": [
+          "en-GB",
+          "de",
+          "fr"
+        ]
+      },
+      "timestamp": "2019-12-15T17:17:50.243Z",
+      "version": "1.0.229"
+    },
+    {
+      "summary": {
+        "languages": [
+          {
+            "added": 0,
+            "lang": "en-GB",
+            "removed": 0,
+            "untranslated": 1,
+            "updated": 0,
+            "wordCount": 3
+          },
+          {
+            "added": 0,
+            "lang": "de",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "lang": "fr",
+            "removed": 0,
+            "untranslated": 3,
+            "updated": 0,
+            "wordCount": 12
+          }
+        ],
+        "totalLanguagesCount": 3,
+        "totalTranslationsCount": 5,
+        "totalUntranslatedCount": 4,
+        "totalWordCount": 15,
+        "translationLanguages": [
+          "en-GB",
+          "de",
+          "fr"
+        ]
+      },
+      "timestamp": "2019-12-15T17:30:58.820Z",
+      "version": "1.0.229"
+    },
+    {
+      "summary": {
+        "languages": [
+          {
+            "added": 0,
+            "lang": "en-GB",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "lang": "de",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "lang": "fr",
+            "removed": 0,
+            "untranslated": 3,
+            "updated": 0,
+            "wordCount": 12
+          }
+        ],
+        "totalLanguagesCount": 3,
+        "totalTranslationsCount": 5,
+        "totalUntranslatedCount": 3,
+        "totalWordCount": 12,
+        "translationLanguages": [
+          "en-GB",
+          "de",
+          "fr"
+        ]
+      },
+      "timestamp": "2019-12-15T17:31:14.166Z",
+      "version": "1.0.229"
+    },
+    {
+      "summary": {
+        "languages": [
+          {
+            "added": 0,
+            "lang": "en-GB",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "lang": "de",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "lang": "fr",
+            "removed": 0,
+            "untranslated": 3,
+            "updated": 0,
+            "wordCount": 12
+          },
+          {
+            "added": 5,
+            "lang": "es",
+            "removed": 0,
+            "untranslated": 5,
+            "updated": 0,
+            "wordCount": 16
+          }
+        ],
+        "totalLanguagesCount": 4,
+        "totalTranslationsCount": 5,
+        "totalUntranslatedCount": 8,
+        "totalWordCount": 28,
+        "translationLanguages": [
+          "en-GB",
+          "de",
+          "fr",
+          "es"
+        ]
+      },
+      "timestamp": "2019-12-15T17:33:36.395Z",
+      "version": "1.0.229"
+    },
+    {
+      "summary": {
+        "languages": [
+          {
+            "added": 0,
+            "lang": "en-GB",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "lang": "de",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "lang": "fr",
+            "removed": 0,
+            "untranslated": 3,
+            "updated": 0,
+            "wordCount": 12
+          },
+          {
+            "added": 0,
+            "lang": "es",
+            "removed": 0,
+            "untranslated": 3,
+            "updated": 0,
+            "wordCount": 9
+          }
+        ],
+        "totalLanguagesCount": 4,
+        "totalTranslationsCount": 5,
+        "totalUntranslatedCount": 6,
+        "totalWordCount": 21,
+        "translationLanguages": [
+          "en-GB",
+          "de",
+          "fr",
+          "es"
+        ]
+      },
+      "timestamp": "2019-12-15T17:34:20.811Z",
+      "version": "1.0.229"
+    },
+    {
+      "summary": {
+        "languages": [
+          {
+            "added": 0,
+            "lang": "en-GB",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "lang": "de",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "lang": "fr",
+            "removed": 0,
+            "untranslated": 3,
+            "updated": 0,
+            "wordCount": 12
+          },
+          {
+            "added": 0,
+            "lang": "es",
+            "removed": 0,
+            "untranslated": 2,
+            "updated": 0,
+            "wordCount": 7
+          }
+        ],
+        "totalLanguagesCount": 4,
+        "totalTranslationsCount": 5,
+        "totalUntranslatedCount": 5,
+        "totalWordCount": 19,
+        "translationLanguages": [
+          "en-GB",
+          "de",
+          "fr",
+          "es"
+        ]
+      },
+      "timestamp": "2019-12-15T17:50:03.216Z",
+      "version": "1.0.229"
     }
   ]
 }
