--- a/app/i18n/summary.json
+++ b/app/i18n/summary.json
@@ -834,6 +834,376 @@
       },
       "timestamp": "2019-12-15T17:50:03.216Z",
       "version": "1.0.229"
+    },
+    {
+      "summary": {
+        "languages": [
+          {
+            "added": 0,
+            "filename": "app/i18n/en-GB.json",
+            "lang": "en-GB",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/en-GB_whitelist.json",
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "filename": "app/i18n/de.json",
+            "lang": "de",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/de_whitelist.json",
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "filename": "app/i18n/fr.json",
+            "lang": "fr",
+            "removed": 0,
+            "untranslated": 3,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/fr_whitelist.json",
+            "wordCount": 12
+          },
+          {
+            "added": 0,
+            "filename": "app/i18n/es.json",
+            "lang": "es",
+            "removed": 0,
+            "untranslated": 2,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/es_whitelist.json",
+            "wordCount": 7
+          }
+        ],
+        "totalLanguagesCount": 4,
+        "totalTranslationsCount": 5,
+        "totalUntranslatedCount": 5,
+        "totalWordCount": 19,
+        "translationLanguages": [
+          "en-GB",
+          "de",
+          "fr",
+          "es"
+        ]
+      },
+      "timestamp": "2019-12-17T14:46:49.928Z",
+      "version": "1.0.232-dev.0"
+    },
+    {
+      "summary": {
+        "languages": [
+          {
+            "added": 0,
+            "filename": "app/i18n/en-GB.json",
+            "lang": "en-GB",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/en-GB_whitelist.json",
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "filename": "app/i18n/de.json",
+            "lang": "de",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/de_whitelist.json",
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "filename": "app/i18n/fr.json",
+            "lang": "fr",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/fr_whitelist.json",
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "filename": "app/i18n/es.json",
+            "lang": "es",
+            "removed": 0,
+            "untranslated": 2,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/es_whitelist.json",
+            "wordCount": 7
+          }
+        ],
+        "totalLanguagesCount": 4,
+        "totalTranslationsCount": 5,
+        "totalUntranslatedCount": 2,
+        "totalWordCount": 7,
+        "translationLanguages": [
+          "en-GB",
+          "de",
+          "fr",
+          "es"
+        ]
+      },
+      "timestamp": "2019-12-17T14:55:50.235Z",
+      "version": "1.0.232-dev.0"
+    },
+    {
+      "summary": {
+        "languages": [
+          {
+            "added": 0,
+            "filename": "app/i18n/en-GB.json",
+            "lang": "en-GB",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/en-GB_whitelist.json",
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "filename": "app/i18n/de.json",
+            "lang": "de",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/de_whitelist.json",
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "filename": "app/i18n/fr.json",
+            "lang": "fr",
+            "removed": 0,
+            "untranslated": 3,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/fr_whitelist.json",
+            "wordCount": 12
+          },
+          {
+            "added": 0,
+            "filename": "app/i18n/es.json",
+            "lang": "es",
+            "removed": 0,
+            "untranslated": 2,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/es_whitelist.json",
+            "wordCount": 7
+          }
+        ],
+        "totalLanguagesCount": 4,
+        "totalTranslationsCount": 5,
+        "totalUntranslatedCount": 5,
+        "totalWordCount": 19,
+        "translationLanguages": [
+          "en-GB",
+          "de",
+          "fr",
+          "es"
+        ]
+      },
+      "timestamp": "2019-12-17T14:56:12.613Z",
+      "version": "1.0.232-dev.0"
+    },
+    {
+      "summary": {
+        "languages": [
+          {
+            "added": 0,
+            "filename": "app/i18n/en-GB.json",
+            "lang": "en-GB",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/en-GB_whitelist.json",
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "filename": "app/i18n/de.json",
+            "lang": "de",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/de_whitelist.json",
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "filename": "app/i18n/fr.json",
+            "lang": "fr",
+            "removed": 0,
+            "untranslated": 3,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/fr_whitelist.json",
+            "wordCount": 12
+          },
+          {
+            "added": 0,
+            "filename": "app/i18n/es.json",
+            "lang": "es",
+            "removed": 0,
+            "untranslated": 2,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/es_whitelist.json",
+            "wordCount": 7
+          },
+          {
+            "added": 5,
+            "filename": "app/i18n/it.json",
+            "lang": "it",
+            "removed": 0,
+            "untranslated": 5,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/it_whitelist.json",
+            "wordCount": 16
+          }
+        ],
+        "totalLanguagesCount": 5,
+        "totalTranslationsCount": 5,
+        "totalUntranslatedCount": 10,
+        "totalWordCount": 35,
+        "translationLanguages": [
+          "en-GB",
+          "de",
+          "fr",
+          "es",
+          "it"
+        ]
+      },
+      "timestamp": "2019-12-17T14:58:52.614Z",
+      "version": "1.0.232-dev.0"
+    },
+    {
+      "summary": {
+        "languages": [
+          {
+            "added": 0,
+            "filename": "app/i18n/en-GB.json",
+            "lang": "en-GB",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/en-GB_whitelist.json",
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "filename": "app/i18n/de.json",
+            "lang": "de",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/de_whitelist.json",
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "filename": "app/i18n/fr.json",
+            "lang": "fr",
+            "removed": 0,
+            "untranslated": 3,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/fr_whitelist.json",
+            "wordCount": 12
+          },
+          {
+            "added": 0,
+            "filename": "app/i18n/es.json",
+            "lang": "es",
+            "removed": 0,
+            "untranslated": 2,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/es_whitelist.json",
+            "wordCount": 7
+          },
+          {
+            "added": 0,
+            "filename": "app/i18n/it.json",
+            "lang": "it",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/it_whitelist.json",
+            "wordCount": 0
+          }
+        ],
+        "totalLanguagesCount": 5,
+        "totalTranslationsCount": 5,
+        "totalUntranslatedCount": 5,
+        "totalWordCount": 19,
+        "translationLanguages": [
+          "en-GB",
+          "de",
+          "fr",
+          "es",
+          "it"
+        ]
+      },
+      "timestamp": "2019-12-17T14:59:29.827Z",
+      "version": "1.0.232-dev.0"
+    },
+    {
+      "summary": {
+        "languages": [
+          {
+            "added": 0,
+            "filename": "app/i18n/en-GB.json",
+            "lang": "en-GB",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/en-GB_whitelist.json",
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "filename": "app/i18n/de.json",
+            "lang": "de",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/de_whitelist.json",
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "filename": "app/i18n/fr.json",
+            "lang": "fr",
+            "removed": 0,
+            "untranslated": 3,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/fr_whitelist.json",
+            "wordCount": 12
+          },
+          {
+            "added": 0,
+            "filename": "app/i18n/es.json",
+            "lang": "es",
+            "removed": 0,
+            "untranslated": 2,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/es_whitelist.json",
+            "wordCount": 7
+          }
+        ],
+        "totalLanguagesCount": 4,
+        "totalTranslationsCount": 5,
+        "totalUntranslatedCount": 5,
+        "totalWordCount": 19,
+        "translationLanguages": [
+          "en-GB",
+          "de",
+          "fr",
+          "es"
+        ]
+      },
+      "timestamp": "2019-12-17T14:59:49.265Z",
+      "version": "1.0.232-dev.0"
     }
   ]
 }
