--- a/app/i18n/en-GB_whitelist.json
+++ b/app/i18n/en-GB_whitelist.json
@@ -2,8 +2,8 @@
   "ids": [
     "containers.1645138363",
     "containers.2731101254",
-    "containers.Forms.165405603",
     "containers.Forms.layouts.reset",
-    "containers.Forms.layouts.submit"
+    "containers.Forms.layouts.submit",
+    "containers.Forms.title"
   ]
 }
