--- a/app/i18n/summary.json
+++ b/app/i18n/summary.json
@@ -1204,6 +1204,180 @@
       },
       "timestamp": "2019-12-17T14:59:49.265Z",
       "version": "1.0.232-dev.0"
+    },
+    {
+      "summary": {
+        "languages": [
+          {
+            "added": 1,
+            "filename": "app/i18n/en-GB.json",
+            "lang": "en-GB",
+            "removed": 1,
+            "untranslated": 1,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/en-GB_whitelist.json",
+            "wordCount": 3
+          },
+          {
+            "added": 1,
+            "filename": "app/i18n/de.json",
+            "lang": "de",
+            "removed": 1,
+            "untranslated": 1,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/de_whitelist.json",
+            "wordCount": 3
+          },
+          {
+            "added": 1,
+            "filename": "app/i18n/fr.json",
+            "lang": "fr",
+            "removed": 1,
+            "untranslated": 3,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/fr_whitelist.json",
+            "wordCount": 12
+          },
+          {
+            "added": 1,
+            "filename": "app/i18n/es.json",
+            "lang": "es",
+            "removed": 1,
+            "untranslated": 3,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/es_whitelist.json",
+            "wordCount": 10
+          }
+        ],
+        "totalLanguagesCount": 4,
+        "totalTranslationsCount": 5,
+        "totalUntranslatedCount": 8,
+        "totalWordCount": 28,
+        "translationLanguages": [
+          "en-GB",
+          "de",
+          "fr",
+          "es"
+        ]
+      },
+      "timestamp": "2019-12-17T15:15:18.005Z",
+      "version": "1.0.235-dev.0"
+    },
+    {
+      "summary": {
+        "languages": [
+          {
+            "added": 0,
+            "filename": "app/i18n/en-GB.json",
+            "lang": "en-GB",
+            "removed": 0,
+            "untranslated": 1,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/en-GB_whitelist.json",
+            "wordCount": 3
+          },
+          {
+            "added": 0,
+            "filename": "app/i18n/de.json",
+            "lang": "de",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/de_whitelist.json",
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "filename": "app/i18n/fr.json",
+            "lang": "fr",
+            "removed": 0,
+            "untranslated": 3,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/fr_whitelist.json",
+            "wordCount": 12
+          },
+          {
+            "added": 0,
+            "filename": "app/i18n/es.json",
+            "lang": "es",
+            "removed": 0,
+            "untranslated": 3,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/es_whitelist.json",
+            "wordCount": 10
+          }
+        ],
+        "totalLanguagesCount": 4,
+        "totalTranslationsCount": 5,
+        "totalUntranslatedCount": 7,
+        "totalWordCount": 25,
+        "translationLanguages": [
+          "en-GB",
+          "de",
+          "fr",
+          "es"
+        ]
+      },
+      "timestamp": "2019-12-17T15:29:19.382Z",
+      "version": "1.0.235-dev.0"
+    },
+    {
+      "summary": {
+        "languages": [
+          {
+            "added": 0,
+            "filename": "app/i18n/en-GB.json",
+            "lang": "en-GB",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/en-GB_whitelist.json",
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "filename": "app/i18n/de.json",
+            "lang": "de",
+            "removed": 0,
+            "untranslated": 0,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/de_whitelist.json",
+            "wordCount": 0
+          },
+          {
+            "added": 0,
+            "filename": "app/i18n/fr.json",
+            "lang": "fr",
+            "removed": 0,
+            "untranslated": 3,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/fr_whitelist.json",
+            "wordCount": 12
+          },
+          {
+            "added": 0,
+            "filename": "app/i18n/es.json",
+            "lang": "es",
+            "removed": 0,
+            "untranslated": 3,
+            "updated": 0,
+            "whitelistFilename": "app/i18n/es_whitelist.json",
+            "wordCount": 10
+          }
+        ],
+        "totalLanguagesCount": 4,
+        "totalTranslationsCount": 5,
+        "totalUntranslatedCount": 6,
+        "totalWordCount": 22,
+        "translationLanguages": [
+          "en-GB",
+          "de",
+          "fr",
+          "es"
+        ]
+      },
+      "timestamp": "2019-12-17T15:29:50.582Z",
+      "version": "1.0.235-dev.0"
     }
   ]
 }
