--- a/app/i18n/fr.json
+++ b/app/i18n/fr.json
@@ -1,25 +1,7 @@
 {
-  "containers.1645138363": {
-    "defaultMessage": "Hello {name}. You have {unreadCount, number} {unreadCount, plural,\n                      one {message}\n                      other {messages}\n                    }",
-    "description": "Main locale page title",
-    "id": "containers.1645138363"
-  },
-  "containers.2731101254": {
-    "defaultMessage": "The date today is {date}",
-    "description": "The locale date now",
-    "id": "containers.2731101254"
-  },
-  "containers.Forms.layouts.reset": {
-    "defaultMessage": "Réinitialisation",
-    "id": "containers.Forms.layouts.reset"
-  },
-  "containers.Forms.layouts.submit": {
-    "defaultMessage": "Soumettre",
-    "description": "The submit button",
-    "id": "containers.Forms.layouts.submit"
-  },
-  "containers.Forms.title": {
-    "defaultMessage": "Forms (Lazy Loaded)",
-    "id": "containers.Forms.title"
-  }
+  "containers.1645138363": "Hello {name}. You have {unreadCount, number} {unreadCount, plural,\n                      one {message}\n                      other {messages}\n                    }",
+  "containers.2731101254": "The date today is {date}",
+  "containers.Forms.layouts.reset": "Réinitialisation",
+  "containers.Forms.layouts.submit": "Soumettre",
+  "containers.Forms.title": "Forms (Lazy Loaded)"
 }
