--- a/app/i18n/en-GB.json
+++ b/app/i18n/en-GB.json
@@ -1,4 +1,5 @@
 {
+  "actions.__dummy__.4128523562": "Got Item",
   "containers.1645138363": "Hello {name}. You have {unreadCount, number} {unreadCount, plural,\n                      one {message}\n                      other {messages}\n                    }",
   "containers.2731101254": "The date today is {date}",
   "containers.Forms.layouts.reset": "Reset Form",
