--- a/app/i18n/de.json
+++ b/app/i18n/de.json
@@ -1,4 +1,5 @@
 {
+  "650704363": "(de) REF: {reference}",
   "actions.__dummy__.4128523562": "(de) Got Item",
   "containers.1645138363": "Willkommen {name}. Sie haben {unreadCount, number} {unreadCount, plural, one {Nachricht} other {Nachrichten}}",
   "containers.2731101254": "Das heutige Datum ist {date}",
