--- a/app/i18n/fr.json
+++ b/app/i18n/fr.json
@@ -1,4 +1,5 @@
 {
+  "650704363": "(fr) REF: {reference}",
   "actions.__dummy__.4128523562": "(fr) Got Item",
   "containers.1645138363": "(fr) Hello {name}. You have {unreadCount, number} {unreadCount, plural,\n                      one {message}\n                      other {messages}\n                    }",
   "containers.2731101254": "(fr) The date today is {date}",
